--- a/config
+++ b/config
@@ -1,195 +1,132 @@
-# Default modkey
+# set Mod
 set $mod Mod4
 
-# Hide titlebar
-new_window pixel
-
-# i3-gaps
-gaps inner 6
-
-# Font for window titles.
-font pango: SauceCodePro Nerd Font Black 12
+# Font for window titles. Will also be used by the bar unless a different font
+font pango:ttf-liberation-mono 16 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# Start a terminal
+# run rofi
+bindsym $mod+d exec rofi -show run
+
+# start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
 # Kill focused window
 bindsym $mod+Shift+End kill
 
-# Start rofi
-bindsym $mod+d exec dmenu_run -fn "Monaco-14"
-
-
-bindsym $mod+p exec pcmanfm
-
-bindsym $mod+o exec google-chrome
-
-bindsym $mod+i exec idea
-
-bindsym $mod+u exec navicat
-
-bindsym $mod+y exec netease-cloud-music
-
-bindsym $mod+t exec code
-
-# launch categorized menu
-#bindsym $mod+z exec --no-startup-id morc_menu
-
-# Move between windows
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
-# Alternatively, you can use the cursor keys:
+# change focus
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# Move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+#  for screen lock
+bindsym $mod+Shift+l exec i3lock-fancy
 
-# Alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+# for sound control
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% 
+bindsym $mod+Shift+F12 exec pactl set-sink-volume 0 +5% 
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5%
+bindsym $mod+Shift+F11 exec pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute exec amixer set Master toggle 
 
-# Split in horizontal orientation
-bindsym $mod+h split h
+# Screen brightness controls use backlight
+bindsym XF86MonBrightnessUp exec backlight +5 # increase screen brightness
+bindsym XF86MonBrightnessDown exec backlight -5 # decrease screen brightness
 
-# Split in vertical orientation
-bindsym $mod+v split v
-
-# Enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# Change container layout (stacked, tabbed, toggle split)
+# change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
-# Toggle tiling / floating
+# toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
-# Change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+# change focus between tiling / floating windows
+bindsym $mod+space focus mode_toggle 
 
-# Focus the parent container
-bindsym $mod+a focus parent
+set $ws1 "1:  "
+set $ws2 "2:  "
+set $ws3 "3:  "
+set $ws4 "4:  "
+set $ws5 "5:  "
+set $ws6 "6:  "
+set $ws7 "7:  "
+set $ws8 "8:  "
+set $ws9 "8:  "
 
-# Name the workspaces
-set $workspace1 "1:  www"
-set $workspace2 "2:  code"
-set $workspace3 "3:  terminal"
-set $workspace4 "4:  files"
-set $workspace5 "5:  virtual machines"
-set $workspace6 "6:  status"
-set $workspace7 "7: ♫ music"
-set $workspace8 "8:  random"
+# switch to workspace
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
 
-# Switch to workspace
-bindsym $mod+1 workspace $workspace1
-bindsym $mod+2 workspace $workspace2
-bindsym $mod+3 workspace $workspace3
-bindsym $mod+4 workspace $workspace4
-bindsym $mod+5 workspace $workspace5
-bindsym $mod+6 workspace $workspace6
-bindsym $mod+7 workspace $workspace7
-bindsym $mod+8 workspace $workspace8
+# move focused container to workspace
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9
 
-workspace $workspace1 output VGA-1
-workspace $workspace2 output VGA-1
-workspace $workspace3 output VGA-1
-workspace $workspace4 output VGA-1
-workspace $workspace5 output VGA-1-2
-workspace $workspace6 output VGA-1-2
-workspace $workspace7 output VGA-1-2
-workspace $workspace8 output VGA-1-2
+# Automatically putting clients on specific workspaces
+#assign [class="chrome"] $ws3
+assign [class="netease-cloud-music"] $ws4
+assign [class="wechat"] $ws3
 
-# Move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $workspace1
-bindsym $mod+Shift+2 move container to workspace $workspace2
-bindsym $mod+Shift+3 move container to workspace $workspace3
-bindsym $mod+Shift+4 move container to workspace $workspace4
-bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace $workspace6
-bindsym $mod+Shift+7 move container to workspace $workspace7
-bindsym $mod+Shift+8 move container to workspace $workspace8
+# window set
+for_window[class=^.*] border pixel 0
+for_window[window_role="pop-up"] floating enable
+for_window[window_role="task_dialog"] floating enbale
+for_window[class="netease-cloud-music"] floating enable
+for_window[class="VirtualBox Manager"] floating enable
+for_window[class="wechat"] floating enable
+for_window[class="vokoscreen"] floating enable
+for_window[class="vlc"] floating enable
 
-# Always open some programs on specified workspace
+# disable follows_mouse
+focus_follows_mouse no
 
-# Reload the configuration file
-#bindsym $mod+Shift+c reload
+# reload the configuration file
+bindsym $mod+Shift+c reload
 
-# Restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
-# Exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m '你确定要退出i3吗？' -b 'Yes' 'i3-msg exit'"
+# exit i3 (logs you out of your X session)
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-# Resize window (you can also use the mouse for that)
-mode "resize"
-{
-        # Resize with the arrow keys
-        bindsym Left resize shrink width 2 px or 2 ppt
-        bindsym Down resize grow height 2 px or 2 ppt
-        bindsym Up resize shrink height 2 px or 2 ppt
-        bindsym Right resize grow width 2 px or 2 ppt
+# resize window (you can also use the mouse for that)
+mode "resize" {
+        # same bindings, but for the arrow keys
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
 
-        # Back to normal: Enter or Escape
+        # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
+
 bindsym $mod+r mode "resize"
 
-# Defining colors
+# i3-gaps config inner/outter gap
+gaps inner 10
+gaps outer 5
 
-# RGB
-set $cyan0	 #4ec2f7
-set $silver0 #e4e4e4
-set $orange  #ff8700
-
-# RGBA
-set $cyan	   #4ec2f799
-set $acqua	 #00708999
-set $wine 	#72003e99
-set $magenta #af005f99
-set $silver  #e4e4e499
-set $toxic   #8EC00099
-set $elegant #00002c99
-
-# Set some nice colors      border	 background text	   indicator
-client.focused              $cyan	   $cyan      $elegant $cyan
-client.unfocused            $elegant $elegant   $cyan    $elegant
-client.focused_inactive     $acqua   $acqua     $silver  $acqua
-client.urgent               $magenta $magenta   $silver  $magenta
-client.placeholder          $magenta $magenta   $silver  $magenta
-
-# Start i3blocks to display a workspace bar
-bar
-{
-	position top
-	status_command i3blocks
-  i3bar_command i3bar -t
-	font pango: SauceCodePro Nerd Font Black 12
-	colors
-	{
-                        # Border	# Background	# Text
-		focused_workspace   $silver0  $silver0  $elegant
-		active_workspace    $elegant  $elegant  $orange
-		inactive_workspace  $elegant  $elegant 	$cyan0
-		urgent_workspace    $acqua    $acqua    $silver0
-		background          $elegant
-    	}
-}
-# Startup programs
-exec_always --no-startup-id feh --bg-scale ~/.wallpapers/cyberpunk.jpg # Wallpaper
-exec --no-startup-id notify-send "Welcome back Quinn!" -i ~/.happy.png # Greeting on startup
+# run polybar 
+exec_always --no-startup-id sh /home/quinn/.config/polybar/launch.sh
+exec_always --no-startup-id feh --bg-scale ~/.wall/wallpaper.jpg
+exec --no-startup-id compton -b & 
+exec --no-startup-id notify-send "Welcome back Quinn!" -i ~/.wall/happy.png
